Fix spilly gallery

--- a/source/assets/styles/components/gallery.scss
+++ b/source/assets/styles/components/gallery.scss
@@ -1,16 +1,20 @@
-.thumbnail {
-    background-color: #fff;
-    border: 1px solid #a9a9a9;
-    display: block;
-    float: left;
-    margin: 10px 25px 10px 25px;
-    padding: 4px;
-    position: relative;
+.gallery {
+  @include clearfix;
 }
 
-    .thumbnail:hover {
-      background-color: #a9a9a9;
-    }
+.thumbnail {
+  background-color: #fff;
+  border: 1px solid #a9a9a9;
+  display: block;
+  float: left;
+  margin: 10px 25px 10px 25px;
+  padding: 4px;
+  position: relative;
+}
+
+.thumbnail:hover {
+  background-color: #a9a9a9;
+}
 
 /** LIGHTBOX MARKUP **/
 
